# ai-sandbox-landlock

./: Cargo.toml  LICENSE.txt  Makefile  README.md  SECURITY.md  generated-profile.yaml  project.md  tz.md
docs/: cli.md  overview.md
docs/man/: ai-sandbox-landlock.1
examples/: ai-sandbox-landlock.yaml  generated-profile.yaml  vim.yaml
src/: main.rs
tests/: integration.rs
