[package]
name = "ai-sandbox-landlock"
version = "0.1.0"
edition = "2021"
description = "Landlock-based sandbox launcher with YAML profiles"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
landlock = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
